--- a/apps/web/.env.local.example
+++ b/apps/web/.env.local.example
@@ -3,4 +3,4 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 
 # Shop ID - replace with your actual shop ID from Shopify
 # This should match the shop_id in your database tables
-NEXT_PUBLIC_SHOP_ID=default-shop
+NEXT_PUBLIC_SHOP_ID=BHM
