--- a/apps/web-svelte/package.json
+++ b/apps/web-svelte/package.json
@@ -12,14 +12,15 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
+		"@dashboard/config": "workspace:*",
 		"@sveltejs/adapter-auto": "^7.0.0",
 		"@sveltejs/kit": "^2.47.1",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
-		"autoprefixer": "^10.4.22",
-		"postcss": "^8.5.6",
+		"autoprefixer": "^10.4.17",
+		"postcss": "^8.4.35",
 		"svelte": "^5.41.0",
 		"svelte-check": "^4.3.3",
-		"tailwindcss": "^4.1.17",
+		"tailwindcss": "^3.4.1",
 		"typescript": "^5.9.3",
 		"vite": "^7.1.10"
 	},
