--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,6 @@
 {
-  "buildCommand": "pnpm install && cd packages/config && pnpm build && cd ../../apps/web && pnpm build",
-  "outputDirectory": "apps/web/.next",
-  "installCommand": "pnpm install",
-  "framework": "nextjs"
+  "buildCommand": "cd apps/web-svelte && pnpm build",
+  "outputDirectory": "apps/web-svelte/.svelte-kit/output",
+  "framework": "sveltekit",
+  "installCommand": "pnpm install"
 }
-
