--- a/apps/web-svelte/package.json
+++ b/apps/web-svelte/package.json
@@ -14,6 +14,7 @@
 	"devDependencies": {
 		"@dashboard/config": "workspace:*",
 		"@sveltejs/adapter-auto": "^7.0.0",
+		"@sveltejs/adapter-vercel": "^6.1.1",
 		"@sveltejs/kit": "^2.47.1",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"autoprefixer": "^10.4.17",
