--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "buildCommand": "cd apps/web-svelte && pnpm build",
+  "outputDirectory": "apps/web-svelte/.vercel/output",
   "framework": "sveltekit",
   "installCommand": "pnpm install"
 }
