fix: simplify vercel.json and set root directory via CLI

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
+```json
 {
-  "buildCommand": "cd apps/web-svelte && pnpm build",
-  "framework": "sveltekit",
-  "installCommand": "pnpm install"
+  "framework": "sveltekit"
 }
+```
